static/css/styles.css
/* HERE I IMPORT THE FONTS USED ON THE WEBSITE FROM GOOGLE FONTS SOURCE: https://fonts.google.com/ */

@import url('https://fonts.googleapis.com/css?family=Krona+One|Roboto&display=swap');

/*---------- GENERAL STYLING ----------*/
body {
    font-family: 'Roboto', sans-serif;
    background-color: #e2e2e2;
}

h1 {
    font-size: 26px;
    font-family: 'Krona One', sans-serif;
}

a {
    color: #000000;
}

a:hover {
    color: #1A76BC;
    text-decoration: none;
}

.row {
    margin: 0;
}

.colors-blue {
    background-color: #1A76BC;
    color: #fafafa;
}

.colors-white {
    background-color: #fafafa;
}

.content-text {
    color: #1A76BC;
}

.content-text:hover {
    color: #1A76BC;
    text-decoration: underline; 
}

/* NAVBAR */
.navbar-background-color {
    background-color: white;
}

.nav-link {
    color: #1A76BC !important;
    font-size: 24px;
    text-align: left;
    display: inline-block;
    padding-bottom: 5px;
    padding-top: 5px;
}

.header-logo {
    max-height: 50px;
    padding-right: 20px;
}

.nav-tabs .nav-item .nav-link {
    background-color: #1A76BC;
    color: #ffffff !important;
    margin-right: 5px;
    margin-left: 5px;
}
  
.nav-tabs .nav-item .nav-link.active {
    background-color: #fafafa;
    border-color: #fafafa;
    color: #000000 !important;
}

/* FOOTER */
.footer-settings {
    background-color: #1A76BC;
    color: #fafafa;
    padding-top: 50px;
    padding-bottom: 50px;
}

.footer-paragraph {
    margin-bottom: 0px;
}

.footer-link {
    color: #fafafa;
}

.footer-link:hover {
    color: #c5c5c5;
    text-decoration: none;
}

.social-media li a i {
    padding-right: 5px;
    color: #fafafa;
    transition: color 0.35s ease-in-out;
    -moz-transition: color 0.35s ease-in-out;
    -webkit-transition: color 0.35s ease-in-out;
    -o-transition: color 0.35s ease-in-out;
}

.social-media li a i:hover {
    color: rgb(148, 148, 148);
}

/* HOMEPAGE STYLING */
.content-box {
    padding: 50px 0;
}

.index-intro {
    max-width: 600px;
}

.welcome-container {
    background: url('/static/images/jumbotron-image.jpg') no-repeat center center fixed;
    height: 100vh;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    display: -webkit-flex;
    -webkit-align-items: center;
    justify-content: center;
    position: relative;
}

.jumbotron {
    background-color: transparent;
    color: #fff;
    text-align: center;
    border-radius: 0;
}

.dark-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.icons-homepage {
    padding-bottom: 20px;
}

.blockquote {
    text-align: -webkit-center;
}

.main-paragraph-spacing {
    padding-right: 50px;
    padding-left: 50px;
}

.home-paragraph {
    max-width: 300px;
    margin: auto;
}

/* team-members and team-photo also used on aboutus page */
.team-members {
    padding-right: 50px;
    padding-left: 50px;
}

.team-photo {
    width: 100%;
    padding-bottom: 5px;
}

.team-padding {
    padding-right: 10px;
    padding-left: 10px;
}

/* PAGES POSITIONING */
.page-image-div {
    max-height: 400px;
    overflow: hidden;
}

.page-images {
    width: 100%;
}

.nav-whitespace {
    height: 86px;
}

/* VACANCY OBJECT */
.card {
    margin-bottom: 30px;
}

.card-header {
    color: #fafafa;
    background-color: #1A76BC;
}

.vacancies-cards {
    height: auto;
    max-width: 400px; 
}

.vacancy-text {
    max-width: 800px;
}

.view-vacancy-btn {
    margin-top: 10px;
}

/* PROFILE PAGE */
.tab-content {
    background-color: #fafafa;
}

.tab-bottom-spacing {
    height: 25px;
}

.search-bar {
    display: inline-block;
    max-width: 200px;
}

/* EDIT PAGE STYLING */
.html-edit-schortcuts {
    float: right;
    margin-left: 5px;
    margin-right: 5px;
}

.text-wrap-edit {
    white-space: pre-wrap;
}

/* RESPONSIVE STYLING */
@media (min-width: 768px) {
    h1 {
        font-size: 32px;
    }
    .content-box {
        padding: 80px 100px;
    }
    .vacancies-cards {
        height: 210px;
    }
    .team-members {
        padding-right: 10px;
        padding-left: 10px;
    } 
}

@media (min-width: 992px) {
    .nav-link {
        font-size: 18px;
    }
}

@media (min-width: 1200px) {
    .nav-link {
        font-size: 24px;
    }
    .team-members {
        padding-right: 50px;
        padding-left: 50px;
    }
    .team-padding {
        padding-right: 100px;
        padding-left: 100px;
    }    
}

